--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>javaparser-core</artifactId>
 			<version>3.22.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
